<resources>
    <string name="app_name">IoT Manager</string>
    <string name="Add">Add</string>
    <string name="select_location">Confirm location</string>
    <string name="cancel">Cancel</string>
    <string name="control_id_example">xxxx-xxxx-xxxx-xxxx"</string>
    <string name="share_id_example">xxxx-xxxx-xxxx"</string>
    <string name="Name">Name</string>
    <string name="Type">Type</string>
    <string name="Switch">Switch</string>
    <string name="Slider">Slider</string>
    <string name="control_id">Control Id</string>
    <string name="share_id">Share Id</string>
    <string name="title_activity_manage_counter">Manage your channel</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="open_counter">Open existing channel</string>
    <string name="start_counter">Start new channel</string>
    <string name="start_your_counter">Start your channel</string>
    <string name="value">Value</string>
    <string name="close_counter">Close</string>
    <string name="delete_counter">Delete Channel</string>
    <string name="restriction_counter">Enable location restriction</string>
    <string name="attach_counter">Attach</string>
    <string name="wifi_settings">Wifi settings</string>
    <string name="channel_settings">Channel settings</string>
    <string name="enter_ssid">Enter SSID</string>
    <string name="enter_password">Enter password</string>
    <string name="host_settings">Host settings</string>
    <string name="enter_domain_or_ip_address">Enter Domain or IP Address</string>
    <string name="type">Type</string>
    <string name="save_changes">save</string>
    <string name="search">search</string>
    <string name="enter">Enter</string>
    <string name="action_search">Place Search</string>
    <string name="search_hint">Search address or place</string>
    <string name="menu_search">Search</string>
    <string name="address_search">Searching for Address</string>
    <string name="addressSearchFailed">Address search failed</string>
    <string name="noResultsFound">No results found</string>

</resources>
