<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.naumchevski.iotcontrol.activity.ConfigDeviceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/channel_settings"
            />

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Name"
            android:textSize="20sp" />

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/controlIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:editable="false"/>

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/shareIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:editable="false"/>

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/channelTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:editable="false"/>

        <!-- host settings-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/host_settings"
            android:layout_marginTop="10dp" />

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/hostText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_domain_or_ip_address"
            android:textSize="20sp" />

        <!-- wifi settings-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi_settings"
            android:layout_marginTop="10dp" />

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ssidText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_ssid"
            android:textSize="20sp" />

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_password"
            android:textSize="20sp"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/attach_counter"
        android:layout_marginTop="20dp"
        android:id="@+id/attachChannelButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:id="@+id/cancelButton" />
    
</LinearLayout>
