<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        >

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/control_id"
            android:textSize="20sp"
            android:layout_weight="2" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/control_id_example"
            android:id="@+id/controlIdField"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical">

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Type"
            android:textSize="20sp"
            android:layout_weight="2"
            android:gravity="center_vertical" />

        <info.hoang8f.android.segmented.SegmentedGroup
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/segmentedControl"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="1dp"
            segmentedgroup:sc_corner_radius="0dp">

            <RadioButton
                android:id="@+id/segmentedControlButton1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Switch"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/segmentedControlButton2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Slider"
                style="@style/RadioButton" />
        </info.hoang8f.android.segmented.SegmentedGroup>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/open_counter"
        android:layout_marginTop="20dp"
        android:id="@+id/openChannelButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:id="@+id/cancelButton" />
</LinearLayout>
