<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical"
        >

    <EditText xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:editable="false"/>

    <EditText xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/controlIdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:editable="false"/>

    <EditText xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/shareIdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:editable="false"/>

    <EditText xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/valueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:editable="false"/>

    </LinearLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restriction_counter"
        android:layout_marginBottom="20dp"
        android:id="@+id/locationRestrictionCheckBox"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:visibility="gone"
        android:id="@+id/saveChangesButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_counter"
        android:id="@+id/deleteChannelButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancelButton" />

</LinearLayout>
