<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:orientation="horizontal"
        android:padding="@dimen/small_space">

        <EditText
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchEditText"
            android:hint="@string/search_hint"/>

    </LinearLayout>

    <com.esri.android.map.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".70"
        mapoptions.MapType="Streets"
        mapoptions.center="41.9988759, 21.4100967"
        mapoptions.ZoomLevel="16">
    </com.esri.android.map.MapView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20"
        android:id="@+id/placeLayout"
        android:orientation="vertical"
        android:padding="@dimen/small_space">

        <Button
            android:id="@+id/select_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_location"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
    </LinearLayout>


</LinearLayout>